# Kotlin-Compiler

./: .clang-format  .gitignore  README.md  run.sh
Inputs/: input1.txt  input2.txt  input3.txt  input4.txt  input6.kt
compiler/: .clang-format  make.py  output.s  run.sh  run_all.py
compiler/Inputs/: input1.kt  input10.kt  input11.kt  input12.kt  input13.kt  input14.kt  input15.kt  input16.kt  input17.kt  input18.kt  input19.kt  input2.kt  input21.kt  input23.kt  input24.kt  input3.kt  input4.kt  input5.kt  input6.kt  input7.kt  input8.kt  input9.kt
compiler/Outputs/: output1.s  output10.s  output11.s  output12.s  output13.s  output14.s  output15.s  output16.s  output17.s  output18.s  output19.s  output2.s  output21.s  output23.s  output24.s  output25.s  output3.s  output4.s  output5.s  output6.s  output7.s  output8.s  output9.s
compiler/src/: CMakeLists.txt  main.cpp
compiler/src/exp/: exp.cpp  exp.h
compiler/src/parser/: parseDeclarations.cpp  parseExpressions.cpp  parseStatements.cpp  parser.cpp  parser.h
compiler/src/scanner/: scanner.cpp  scanner.h  token.cpp  token.h
compiler/src/visitor/: declaration.h  environment.h  gencodevisitor.cpp  printvisitor.cpp  visitor.cpp  visitor.h
ejecutables/: output.s  output_exec  x
grammar/: grammar.tex
lambda/: Dockerfile  handler.js  package.json  serverless.yml
lambda/gcc/: as  ld  (+4 more)
src/: CMakeLists.txt  a.out  ast.h  exp.cpp  exp.h  gencodevisitor.cpp  grammar.txt  main.cpp  output.s  output_exec  parser.cpp  parser.h  printvisitor.cpp  scanner.cpp  scanner.h  token.cpp  token.h  visitor.cpp  visitor.h  x
(+62 files in other folders)
